# NaiveGAS

./: CMakeLists.txt  README.md  config.json.example  wercker.yml
cluster/: cluster_info.cc  cluster_info.h
data/: edge.h  macros.h  vertex.cc  vertex.h
engine/: context.cc  context.h  execute.cc  execute.h  scatter.cc  scatter.h
examples/: pagerank.cc
network/: bin_stream.cc  bin_stream.h  mailbox.cc  mailbox.h  mailbox_adress_book.cc  mailbox_adress_book.h  mailbox_eventloop.cc  mailbox_eventloop.h  mailbox_recver.cc  mailbox_recver.h  mailbox_sender.cc  mailbox_sender.h  mailbox_types.h  threadsafe_priority_queue.h  zmq_helpers.h
scripts/: clang-format.py  run-job.py  stop-job.py
system/: sys_func.cc  sys_func.h
test/: CMakeLists.txt  bin_stream_unittest.cc  mailbox_unittest.cc  scatter_unittest.cc  unittest_main.cc  vertex_unittest.cc
